--- a/PyCitySchools.ipynb
+++ b/PyCitySchools.ipynb
@@ -4459,7 +4459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -4476,7 +4476,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4487,7 +4487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 58,
    "metadata": {
     "scrolled": true
    },
@@ -4515,7 +4515,7 @@
        "Categories (4, interval[int64]): [(0, 585] < (585, 615] < (615, 645] < (645, 675]]"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4527,7 +4527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -4540,7 +4540,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4551,7 +4551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 60,
    "metadata": {
     "scrolled": true
    },
@@ -4566,7 +4566,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4579,7 +4579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4590,7 +4590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -4913,7 +4913,7 @@
        "Wright High School                            <$584  "
       ]
      },
-     "execution_count": 64,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4927,25 +4927,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 63,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Spending Ranges (Per Student)\n",
-       "<$584       90.369459\n",
-       "$585-629    81.418596\n",
-       "$630-644    62.857656\n",
-       "$645-675    53.526855\n",
-       "Name: % Overall Passing, dtype: float64"
-      ]
-     },
-     "execution_count": 66,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Calculate averages for the desired columns.\n",
     "spending_math_scores = per_school_summary_df.groupby([\"Spending Ranges (Per Student)\"]).mean()[\"Average Math Score\"]\n",
@@ -4961,7 +4945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 64,
    "metadata": {
     "scrolled": true
    },
@@ -5062,7 +5046,7 @@
        "$645-675                               53.526855  "
       ]
      },
-     "execution_count": 67,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5081,7 +5065,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 65,
    "metadata": {
     "scrolled": true
    },
@@ -5182,7 +5166,7 @@
        "$645-675                                     54  "
       ]
      },
-     "execution_count": 68,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5204,7 +5188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -5363,7 +5347,7 @@
        "max            97.308869          91.334769  "
       ]
      },
-     "execution_count": 71,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5374,7 +5358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5385,7 +5369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -5534,7 +5518,7 @@
        "Griffin High School                       $585-629  Medium (1000-2000)  "
       ]
      },
-     "execution_count": 73,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5548,7 +5532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5566,7 +5550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 70,
    "metadata": {
     "scrolled": true
    },
@@ -5650,7 +5634,7 @@
        "Large (2000-5000)           82.766634          58.286003  "
       ]
      },
-     "execution_count": 75,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5669,7 +5653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 71,
    "metadata": {
     "scrolled": true
    },
@@ -5753,7 +5737,7 @@
        "Large (2000-5000)                 83                58  "
       ]
      },
-     "execution_count": 76,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5775,7 +5759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5793,7 +5777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 73,
    "metadata": {
     "scrolled": true
    },
@@ -5867,7 +5851,7 @@
        "District             80.799062          53.672208  "
       ]
      },
-     "execution_count": 78,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5886,81 +5870,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Average Math Score</th>\n",
-       "      <th>Average Reading Score</th>\n",
-       "      <th>% Passing Math</th>\n",
-       "      <th>% Passing Reading</th>\n",
-       "      <th>% Overall Passing</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>School Type</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>Charter</th>\n",
-       "      <td>83.5</td>\n",
-       "      <td>83.9</td>\n",
-       "      <td>94</td>\n",
-       "      <td>97</td>\n",
-       "      <td>90</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>District</th>\n",
-       "      <td>77.0</td>\n",
-       "      <td>81.0</td>\n",
-       "      <td>67</td>\n",
-       "      <td>81</td>\n",
-       "      <td>54</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "            Average Math Score Average Reading Score % Passing Math  \\\n",
-       "School Type                                                           \n",
-       "Charter                   83.5                  83.9             94   \n",
-       "District                  77.0                  81.0             67   \n",
-       "\n",
-       "            % Passing Reading % Overall Passing  \n",
-       "School Type                                      \n",
-       "Charter                    97                90  \n",
-       "District                   81                54  "
-      ]
-     },
-     "execution_count": 79,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "ValueError",
+     "evalue": "Unknown format code 'f' for object of type 'str'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-75-8ebe64f8a963>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# Formatting\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mtype_summary_df\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"Average Math Score\"\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtype_summary_df\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"Average Math Score\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmap\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"{:.1f}\"\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mtype_summary_df\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"Average Reading Score\"\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtype_summary_df\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"Average Reading Score\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmap\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"{:.1f}\"\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\anaconda3\\envs\\PythonData\\lib\\site-packages\\pandas\\core\\series.py\u001b[0m in \u001b[0;36mmap\u001b[1;34m(self, arg, na_action)\u001b[0m\n\u001b[0;32m   3628\u001b[0m         \u001b[0mdtype\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mobject\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   3629\u001b[0m         \"\"\"\n\u001b[1;32m-> 3630\u001b[1;33m         \u001b[0mnew_values\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0msuper\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_map_values\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0marg\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mna_action\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mna_action\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   3631\u001b[0m         \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_constructor\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnew_values\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mindex\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__finalize__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   3632\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\anaconda3\\envs\\PythonData\\lib\\site-packages\\pandas\\core\\base.py\u001b[0m in \u001b[0;36m_map_values\u001b[1;34m(self, mapper, na_action)\u001b[0m\n\u001b[0;32m   1143\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1144\u001b[0m         \u001b[1;31m# mapper is a function\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1145\u001b[1;33m         \u001b[0mnew_values\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmap_f\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mvalues\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmapper\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   1146\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1147\u001b[0m         \u001b[1;32mreturn\u001b[0m \u001b[0mnew_values\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mpandas\\_libs\\lib.pyx\u001b[0m in \u001b[0;36mpandas._libs.lib.map_infer\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;31mValueError\u001b[0m: Unknown format code 'f' for object of type 'str'"
+     ]
     }
    ],
    "source": [
